--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: $PWD
+        run: echo "$PWD"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
