--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,11 +15,13 @@ on:
 
 env:
   SOAVIRT_URL: "http://18.236.220.213:9080"
+  USER: demo
+  PASS: demo-vm
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -29,11 +31,11 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Echo workspace
         run: echo "$PWD"
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Uplaod to Parasoft Server
         run: |
               echo -e "\nUploading Files.\n"
               cd virt
@@ -41,7 +43,7 @@ jobs:
               do
                 echo ${file}
                 curl -iv --raw \
-                -u admin:admin \
+                -u $USER:$PASS \
                 -H "accept: application/json" \
                 -H "Content-Type: multipart/form-data" \
                 -F "file=@${file}" \
@@ -51,4 +53,12 @@ jobs:
                 cat upload.log
                 sleep 5s
                 echo -e "\nDone."
+              done
+      # Runs a set of commands using the runners shell
+      - name: Test the Asset
+        run: |
+              echo -e "\nTesting Virtual Assets.\n"
+              curl -iv --raw $SOAVIRT_URL/HelloWorld -o test.log
+              cat test.log
+              echo -e "\nDone."
               done
