--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ on:
 env:
   SOAVIRT_URL: "http://18.236.220.213:9080"
   USER: "demo"
-  PASS: "demo-vm"
+  PASS: "demo-user"
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -32,7 +32,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Echo workspace
-        run: echo "$PWD"
+        run: |
+          echo "$PWD","$SOAVIRT_URL", "$USER","$PASS"
 
       # Runs a set of commands using the runners shell
       - name: Uplaod to Parasoft Server
